# cmake_demo

./: CMakeLists.txt  LICENSE  imx6.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt
